Changement de la meta title et ajout du H2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <!-- /////////// SEO /////////// -->
-    <title>Titre de la page (Important de mettre le mot clés au début du titre)</title>
+    <title>Titre de la page</title>
     <meta name="Description" content="Déscription de la page, ceci est important pour le SEO (inclure le mot clé dedans et de préférence au début)">
     <meta name="Revisit-After" content="1 day">
     <meta name="Robots" content="all">
@@ -33,7 +33,9 @@
 
     <!-- /////////// MAIN /////////// -->
     <main>
-        
+        <section>
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, numquam?</h1>
+        </section>
     </main>
 
     <!-- /////////// FOOTER /////////// -->
